plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.influy'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

ext {
	set('springAiVersion', "1.0.0-M3")
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.25'

	//Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//springSecurity
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// s3
	implementation 'software.amazon.awssdk:s3:2.31.40'

	// AI
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M3")
	implementation 'org.springframework.ai:spring-ai-openai'
}

tasks.named('test') {
	useJUnitPlatform()
}
